# NewsBlur

./: .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  SLOW_LOAD_TIMES.md  docker-compose.yml  pyproject.toml  skills-lock.json  worktree-dev.sh
ansible/: deploy.yml
config/: debug_haproxy.conf  requirements.txt
flask_metrics/: flask_metrics_haproxy.py  flask_metrics_mongo.py  flask_metrics_postgres.py  flask_metrics_redis.py
hooks/: pre-commit
media/: robots.txt
newsblur_mcp/: Dockerfile  README.md  pyproject.toml
newsblur_mcp/newsblur_mcp/: __main__.py  auth.py  client.py  log.py  server.py  settings.py  transforms.py  ui.py
newsblur_mcp/newsblur_mcp/cli/: __init__.py  auth.py  output.py  runner.py
newsblur_mcp/newsblur_mcp/cli/commands/: account.py  actions.py  auth.py  discover.py  feeds.py  intelligence.py  stories.py
newsblur_mcp/newsblur_mcp/prompts/: prompts.py
newsblur_mcp/newsblur_mcp/resources/: resources.py
newsblur_mcp/newsblur_mcp/tools/: account.py  actions.py  briefing.py  classifiers.py  discovery.py  feeds.py  notifications.py  stories.py
newsblur_mcp/tests/: conftest.py  test_transforms.py
newsblur_web/: docker_local_settings.py  settings.py  urls.py
node/: unread_counts.js
templates/: base.html
utils/: bluesky_fetcher.py  feed_fetcher.py  feedfinder_pilgrim.py  haproxy_batch_state.py  ip_rate_tracker.py  llm_costs.py  log.py  ratelimit.py  request_introspection_middleware.py  story_functions.py  test_haproxy_batch_state.py  testrunner.py  tlnb.py  user_functions.py  webfeed_fetcher.py  youtube_fetcher.py
(+679 files in other folders)
